--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,9 +14,9 @@
     <!-- Preload hero and home background images -->
 <link rel="preload" as="image" href="/static/media/london.4ee85a4d190c906722ec.webp">
 <link rel="preload" as="image" href="/static/media/bgappostile.78601c4633e4f55105d4.webp">
-<link rel="preload" as="image" href="/static/media/embassy.ea79b67be53cadd689b8.webp">
-<link rel="preload" as="image" href="/static/media/shuttle.645f55bcb7b66bd60c59.jpeg">
-<link rel="preload" as="image" href="/static/media/UKSER.93a7c2d94b8f4d0e4081.webp">
+<!-- <link rel="preload" as="image" href="/static/media/embassy.ea79b67be53cadd689b8.webp"> -->
+<!-- <link rel="preload" as="image" href="/static/media/shuttle.645f55bcb7b66bd60c59.jpeg"> -->
+<!-- <link rel="preload" as="image" href="/static/media/UKSER.93a7c2d94b8f4d0e4081.webp"> -->
 <link rel="preload" as="image" href="/static/media/worldmap.be4eab597c008474a9fc.jpg">
 <link rel="preload" as="image" href="/static/media/homeimage.cd322bd97531d754da75.jpeg">
 
